# robo_ctrl

./: robo_globals.h  robo_globals.h~
ir_reader/: CMakeLists.txt  package.xml~
ir_reader/msg/: distance_readings.msg  distance_readings.msg~
ir_reader/src/: ir_reader.cpp  ir_reader.cpp~
ir_verifier/: CMakeLists.txt  package.xml
ir_verifier/src/: ir_verifier.cpp
navigation_plotter/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
navigation_plotter/src/: navigation_plotter.cpp  wheel_tracker.cpp~
robo_cartesian_controllers/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
robo_cartesian_controllers/src/: circle_cartesian_controller.cpp  line_cartesian_controller.cpp  maze_mapping.cpp  maze_mapping.cpp~  maze_navigator (copy).cpp.old  maze_navigator.cpp  maze_navigator.cpp~  wall_following_controller.cpp  wall_following_controller.cpp~
robo_controllers/: CMakeLists.txt  package.xml
robo_launch/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
robo_launch/config/: lab1.rviz
robo_launch/launch/: .goutputstream-QMJ5PX  line.launch  maze_navigate.launch  maze_navigate.launch~  mazenav_wheeltrack.launch  mazenav_wheeltrack.launch~  obj_rec.launch  obj_rec.launch~  recognition.launch  wall_follow.launch
robo_motor_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml
robo_motor_controller/src/: motor_controller.cpp  motor_controller.cpp.save  (+1 more)
robo_motor_picontroller/: CMakeLists.txt  CMakeLists.txt~  package.xml
robo_open_loop_control/: CMakeLists.txt~  package.xml
wheel_tracker/: CMakeLists.txt~  package.xml
(+5 files in other folders)
