<package>
 <name>robo_launch</name>
  <version>0.1.0</version>
  <description>
    Launch files for RAS lab1.
  </description>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ras_lab1_launch</url>

  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <buildtool_depend>catkin</buildtool_depend>


</package>
